--- a/README
+++ b/README
@@ -4,7 +4,7 @@ SOAPpy - Simple to use SOAP library for Python
 
 Current Maintainer: 	
 
-	Gregory R. Warnes <Gregory.R.Warnes@Pfizer.com>
+	jeff kit <jeffkit.info@gmail.com>
 
 Original Authors: 
 
